trying to get rid of x overflow issues with nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@ body {
   background-image: url(../images/pexels-julie-aagaard-2097090.jpg);
   background-size: 100%;
   background-repeat: no-repeat;
-  padding: 2%;
 }
 html {
   height: 100vh;
@@ -86,4 +85,8 @@ html {
 
 .resultsBtn {
   margin-top: 2%;
+}
+
+nav {
+  overflow-x: hidden;
 }
